@@ -77,6 +77,7 @@ Change log next version
 * Non-backward compatible change: RestAssuredConfig no longer accepts a JsonPathConfig, it now uses a JsonConfig object instead.
 * Added ability to supply a JsonPathConfig instance when using the jsonPath() method from a REST Assured Response object. For example :
       JsonPath jsonPath = get("/namespace-example").jsonPath(jsonPathConfig().with().numberReturnType(BIG_DECIMAL));
+* Added peek and prettyPeek support to XmlPath which also you to print the content to system out but continue working with XmlPath afterwards (issue 271).
 
 
 Change log 1.8.1 (2013-06-07)
